# cafe

./: .env.example  .gitignore  .progress.md  .roadmap.md  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cafe/: main.py
cafe/config/: config.py
cafe/context/: base.py  memory.py
cafe/evaluation/: evaluator.py  metrics.py
cafe/experiments/: experiment_tracker.py
cafe/forecast/: __init__.py  comment.py  forecast_question.py  question.py  source_base.py  source_local.py  source_metaculus.py
cafe/models/: base.py
cafe/models/llm/: base.py  (+4 more)
cafe/news/: api.py  google.py  local.py
cafe/protocols/: api.py  metaculus.py  schemas.py
cafe/sources/: comment.py  source_base.py  source_local.py  source_metaculus.py
cafe/utils/: logging.py
data/forecasts/: test_metaculus_questions.json
examples/: metaculus_sample_comments.json  usage_config.py  usage_evaluation.py  usage_experiment_tracker.py
scripts/: fetch_metaculus_questions.py
scripts/metaculus/: __init__.py  fetch_metaculus_questions.py  process_metaculus_timeseries.py
scripts/news/: search_metaculus_news.py
tests/: test_config.py  test_evaluation.py  test_experiment_tracker.py  test_local_comments.py  test_metaculus_api.py  test_metaculus_api_cache.py  test_metaculus_comments.py  test_metaculus_fetch.py  test_postprocessing.py  test_protocol.py
tests/evaluation/: test_evaluation.py
tests/forecast/: test_comment.py  test_metaculus_api.py  test_metaculus_api_cache.py  test_metaculus_comments.py  test_metaculus_fetch.py  test_pipeline.py  test_source_metaculus.py
(+19 files in other folders)
