[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cafe"
version = "0.1.0"
description = "A modular AI forecasting platform integrating LLMs, time-series forecasting, and live news data."
authors = [
    { name = "Moy Yuan", email = "moy.zhangdie.yuan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "typing-extensions",
    "pytest",
    "mypy",
    "black",
    "isort",
    "python-dotenv",
    "numpy",
    "google-genai>=1.16.1",
    "transformers>=4.52.3",
    "torch>=2.7.0",
    "statsmodels>=0.14.0",
    "bs4>=0.0.2",
]

[project.optional-dependencies]
gpu = [
    "vllm",
]

[tool.mypy]


[tool.setuptools.packages.find]
where = ["cafe"]

[tool.isort]
profile = "black"
